--- a/contato.html
+++ b/contato.html
@@ -15,7 +15,7 @@
                     <label for="nome">Nome</label>
                     <input type="text" id="Nome">
                     <i class="sucesso-img"><img src="" alt="Imagem"></i>
-                    <i class="erro-img"> <img src="src/assets/" alt="Erro ao crregar Imagem"></i>
+                    <i class="erro-img"> <img src="src/assets/" alt=""></i>
                     <small>Erro!!!</small>
                 </article>
                 
@@ -23,7 +23,7 @@
                     <label for="email">Email</label>
                     <input type="email" id="Email">
                     <i class="sucesso-img"><img src="" alt="Imagem"></i>
-                    <i class="erro-img"> <img src="src/assets/" alt="Erro ao crregar Imagem"></i>
+                    <i class="erro-img"> <img src="src/assets/" alt=""></i>
                     <small>Erro!!!</small>
                 </article>
 
@@ -31,7 +31,7 @@
                     <label for="Senha">Descrição</label>
                     <input type="text" id="Descrição">
                     <i class="sucesso-img"><img src="" alt="Imagem"></i>
-                    <i class="erro-img"> <img src="src/assets/" alt="Erro ao crregar Imagem"></i>
+                    <i class="erro-img"> <img src="src/assets/" alt=""></i>
                     <small>Erro!!!</small>
                 </article>
                 
