--- a/src/pages/contato.html
+++ b/src/pages/contato.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Contato</title>
 </head>
 <body>
+    <header>
+        <img src="Colocar um mimagem" alt="imagem">
+        <nav>
+            <ul>
+                <li><a href="../../index.html">home</a></li>
+                <li><a href="./sobre.html">Sobre</a></li>
+                <li><a href="./quiz.html">Quiz</a></li>
+                <li><a href="./contato.html">Contato</a></li>
+            </ul>
+        </nav>
+    <div>
+        <input type="button" class="cor" onclick="trocar('#3ae4b1')">
+        <input type="button" class="cor" onclick="trocar('#E43AB7FF')">
+        <input type="button" class="cor" onclick="trocar('#FFFF1FFF')">
+    </div>
+    </header>
     <main id="caomtaimer-contato">
         <div class="Contato">
         <form class="form" id="form">
