--- a/index.html
+++ b/index.html
@@ -3,28 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="./src/css/style.css">
     <title>Projeto3</title>
 </head>
 <body>
     <div id="inicio">
-        <h1 id="titulo">Bem-vindo ao site</h1>
-        <p id="Texto"> Com grandes codigos vem grandes bugs</p>
-        <img src="" alt="imagem">
+        <h1 id="titulo">Bem-Vindo ao site</h1>
+        <p id="texto"> Com grandes codigos vem grandes bugs</p>
+        <img src="./src/assets/giphy (1).gif" alt="imagem" class="inicio">
     </div>
     <header>
-        <img src="Colocar um mimagem" alt="imagem">
+        <img src="src/assets/giphy (1).gif" alt="imagem" id="logo">
         <nav>
             <ul>
-                <li><a href="#">home</a></li>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="./index.html">home</a></li>
+                <li><a href="./src/pages/sobre.html">Sobre</a></li>
+                <li><a href="./src/pages/quiz.html">Quiz</a></li>
+                <li><a href="./src/pages/contato.html">Contato</a></li>
             </ul>
         </nav>
     <div>
         <input type="button" class="cor" onclick="trocar('#3ae4b1')">
-        <input type="button" class="cor" onclick="trocar('#3ae4b1')">
-        <input type="button" class="cor" onclick="trocar('#3ae4b1')">
+        <input type="button" class="cor" onclick="trocar('#E43AB7FF')">
+        <input type="button" class="cor" onclick="trocar('#FFFF1FFF')">
     </div>
     </header>
 
