Mudando as cores

--- a/index.html
+++ b/index.html
@@ -23,13 +23,11 @@
             </ul>
         </nav>
     <div>
-        <input type="button" class="cor" onclick="trocar('#3ae4b1')">
-        <input type="button" class="cor" onclick="trocar('#E43AB7FF')">
-        <input type="button" class="cor" onclick="trocar('#FFFF1FFF')">
+        <input type="button" id="cor1" onclick="trocar('#858585')">
+        <input type="button" id="cor2" onclick="trocar('#ffc0cb')">
+        <input type="button" id="cor3" onclick="trocar('#b85615')">
     </div>
-    </header>
-
-
+</header>
     <footer>
         <p>&copy;-2025- todos os direitos reservaos</p>
     </footer>
