--- a/src/pages/contato.html
+++ b/src/pages/contato.html
@@ -32,28 +32,30 @@
                 <article class="control">
                     <label for="nome">Nome</label>
                     <input type="text" id="nome">
-                    <i class="erro-img"><img src="./src/assets/error.svg"></i>
-                    <small>Erro !!!</small>
+                    <i class="error"><img src="../assets/erro.svg"></i>
+                    <small></small>
                 </article>
 
                 <article class="control">    
                     <label for="email">Email</label>
                     <input type="email" id="email">
-                    <i class="erro-img"><img src="./src/assets/error.svg"></i>
-                    <small>Erro !!!</small>
+                    <i class="error"><img src="../assets/erro.svg"></i>
+                    <small></small>
                 </article>
 
                 <article class="control">    
                     <label for="descricao">Descrição</label>
                     <textarea type="text" name="descricao" id="descricao"></textarea>
-                    <i class="erro-img"><img src="./src/assets/error.svg"></i>
-                    <small>Erro !!!</small>
+                    <i class="error"><img src="../assets/erro.svg"></i>
+                    <small></small>
                 </article>      
 
-                <button type="submit" onclick="chamar()">ENVIAR</button>                
+                <button type="submit" onclick="validar()">ENVIAR</button>                
             </form>
         </div>
      </main>
+
+    <!-- CHAMANDO O SCRIPT CONTATO EXTERNO -->
+     <script src="../js/contato.js"></script>
 </body>
 </html>
-
